--- a/DEW/UT04-01/index.html
+++ b/DEW/UT04-01/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" name="" id="">
+    <label for="telefono"></label>
+    <input type="tel" name="" id="telefono">
 </body>
 </html>
