--- a/DEW/UT04-01/index.html
+++ b/DEW/UT04-01/index.html
@@ -6,7 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <label for="telefono"></label>
-    <input type="tel" name="" id="telefono">
+    <label for="telefono">telefono</label>
+    <input type="tel" name="telefono" id="">
+    <label for="fecha">fecha</label>
+    <input type="date" name="fecha" id="">
+    <label for="numero">numero</label>
+    <input type="number" name="numero" id="">
+    <label for="url">url</label>
+    <input type="url" name="url" id="">
 </body>
 </html>
