--- a/DEW/UT04-01/index.html
+++ b/DEW/UT04-01/index.html
@@ -6,16 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <label for="telefono">telefono</label>
-    <input type="tel" name="telefono" id="">
-    <br>
-    <label for="fecha">fecha</label>
-    <input type="date" name="fecha" id="">
-    <br>
-    <label for="numero">numero</label>
-    <input type="number" name="numero" id="">
-    <br>
-    <label for="url">url</label>
-    <input type="url" name="url" id="">
+    <form action="https://www.w3schools.com/action_page.php">
+        <input type="tel" name="telefono" id="">
+        <input type="submit" name="" id="">
+    </form>
 </body>
 </html>
