--- a/DEW/UT04-01/index.html
+++ b/DEW/UT04-01/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <form action="https://www.w3schools.com/action_page.php">
-        <input type="tel" name="telefono" id="">
+        <input type="tel" name="Telefono" id="">
         <input type="submit" name="" id="">
     </form>
 </body>
