--- a/DEW/UT04-01/index.html
+++ b/DEW/UT04-01/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -9,16 +9,16 @@
 </head>
 
 <body>
-    <form action="https://www.w3schools.com/action_page.php">
+    <form id="formulario" novalidate action="https://www.w3schools.com/action_page.php" >
         <fieldset>
             <legend>Datos usuario</legend>
             <hr>
             <div class="dosCol">
                 <label for="NombreUsuario">Nombre de Usuario</label>
                 <label for="password">Contraseña</label>
-                <input required="" type="text" name="NombreUsuario"  id="userName" placeholder="Nombre de usuario">
+                <input required type="text" name="NombreUsuario"  id="userName" placeholder="Nombre de usuario" maxlength="15" minlength="3">
                 <div>
-                    <input required="" type="password" name="password" id="password"  placeholder="Introduce contraseña" >
+                    <input required type="password" name="password" id="password"  placeholder="Introduce contraseña" minlength="7">
                 </div>
                 <div></div>
                 <div>
@@ -33,42 +33,42 @@
             <div class="dosCol">
                 <label for="Nombre">Nombre</label>
                 <label for="Apellidos">Apellidos</label>
-                <input required="" type="text" name="Nombre" id="Nombre" placeholder="Nombre">
-                <input required="" type="text" name="Apellidos" id="Apellidos" placeholder="Apellidos">
+                <input required="" type="text" name="Nombre" id="Nombre" maxlength="15" minlength="2" placeholder="Nombre">
+                <input required="" type="text" name="Apellidos" id="Apellidos" maxlength="25" minlength="2" placeholder="Apellidos">
                 <label for="telefono">Teléfono</label>
                 <label for="codigoPostal">Código postal</label>
-                <input required="" type="tel" name="telefono" id="telefono"  placeholder="Ejem: (+34)922123123">
-                <input required="" type="text" name="codigoPostal" id="codigoPostal" placeholder="38XXX">
+                <input required="" type="tel" name="telefono" id="telefono" maxlength="9" minlength="9" placeholder="Ejem:922123123">
+                <input required="" type="text" name="codigoPostal" id="codigoPostal" maxlength="5" minlength="5" placeholder="38XXX">
             </div>
             <div class="tresCol">
                 <label for="DNI-NIE">DNI/NIE</label>
                 <span>Crear cuenta como:</span>
                 <label for="AnioNacimiento">Año de Nacimiento</label>
                 <div>
-                    <select name="DNI-NIE_select" id="DNI-NIE_select">
+                    <select required="" name="DNI-NIE_select" id="DNI-NIE_select">
                         <option value="" disabled selected>---</option>
                         <option value="DNI">DNI</option>
                         <option value="NIE">NIE</option>
                     </select>
-                    <input required type="text" name="DNI-NIE"  id="DNI-NIE" placeholder="DNI / NIE">
+                    <input required type="text" name="DNI-NIE"  id="DNI-NIE" maxlength="9" minlength="9" placeholder="DNI / NIE">
                 </div>
                 <div>
-                    <input  type="radio" name="CrearCuenta" id="Particular">
+                    <input  type="radio" name="CrearCuenta" checked id="Particular">
                     <label for="Particular">Particular</label>
                     <input  type="radio" name="CrearCuenta" id="Empresa">
                     <label for="Empresa">Empresa</label>
                 </div>
                 <select name="AnioNacimiento" id="AnioNacimiento"></select>
             </div>
-            <span>Elige tus aficiones:</span>
+            <span>Elige tus aficiones (al menos 2):</span>
             <div class="tresCol">
                 <div>
                     <input  type="checkbox" name="aficiones" id="Musica">
                     <label for="Musica">Música</label>
                 </div>
                 <div>
-                    <input  type="checkbox" name="aficiones" id="Dporte">
-                    <label for="Dporte">Deporte</label>
+                    <input  type="checkbox" name="aficiones" id="Deporte">
+                    <label for="Deporte">Deporte</label>
                 </div>
                 <div>
                     <input  type="checkbox" name="aficiones" id="VideoJuegos">
@@ -93,17 +93,16 @@
             <hr>
             <div class="unacol">
                 <label for="titulo">Título</label>
-                <input required="" type="text" id="titulo" oninput="conteoTitulo()" maxlength="15">
+                <input required="" type="text" id="titulo" name="Titulo" oninput="conteoTitulo()" maxlength="15">
                 <p class="contador" id="contadorTitulo">0/15</p>
                 <label for="Descripcion">Descripción</label>
-                <textarea name="Descripcion" id="Descripcion" maxlength="120" oninput="conteoDescr()"></textarea>
+                <textarea name="Descripcion" id="Descripcion" required maxlength="120" oninput="conteoDescr()"></textarea>
                 <p class="contador" id="contadorDescrip">0/120</p>
             </div>
         </fieldset>
         <button type="submit">Enviar</button>
-        <!-- <input type="reset" name="Resetear" id="Resetear" value="Resetear"> -->
+        <input type="reset" name="Resetear" id="Resetear" value="Resetear">
     </form>
     <script src="script.js"></script>
 </body>
-
 </html>
