--- a/DEW/UT04-02/index.html
+++ b/DEW/UT04-02/index.html
@@ -9,101 +9,115 @@
 </head>
 
 <body>
-    <form id="formulario" novalidate action="https://www.w3schools.com/action_page.php" >
-        <fieldset>
-            <legend>Datos usuario</legend>
-            <hr>
-            <div class="dosCol">
-                <label for="NombreUsuario">Nombre de Usuario</label>
-                <label for="password">Contraseña</label>
-                <input required type="text" name="NombreUsuario"  id="userName" placeholder="Nombre de usuario" maxlength="15" minlength="3">
-                <div>
-                    <input required type="password" name="Contrasena" id="password"  placeholder="Introduce contraseña" minlength="7">
+    <div>
+        <form id="formulario" novalidate action="https://www.w3schools.com/action_page.php" >
+            <fieldset>
+                <legend>Datos usuario</legend>
+                <hr>
+                <div class="dosCol">
+                    <label for="NombreUsuario">Nombre de Usuario</label>
+                    <label for="password">Contraseña</label>
+                    <div class="unacol">
+                        <input required type="text" name="NombreUsuario" id="userName" placeholder="Nombre de usuario" maxlength="20" minlength="4">
+                    </div>
+                    <div>
+                        <input required type="password" name="Contrasena" id="password" pattern="[0-9]{8}" placeholder="Introduce contraseña numérica" minlength="8" maxlength="8" >
+                    </div>
+                    <div></div>
+                    <div>
+                        <input  type="checkbox" name="showPassword" id="showPassword">
+                        <label for="showPassword">Mostrar Contraseña</label>
+                    </div>
                 </div>
-                <div></div>
-                <div>
-                    <input  type="checkbox" name="showPassword" id="showPassword">
-                    <label for="showPassword">Mostrar Contraseña</label>
+            </fieldset>
+            <fieldset>
+                <legend>Datos Personales</legend>
+                <hr>
+                <div class="dosCol">
+                    <label for="Nombre">Nombre</label>
+                    <label for="Apellidos">Apellidos</label>
+                    <div class="unacol">
+                        <input required="" type="text" name="Nombre" id="Nombre" maxlength="20" minlength="4" placeholder="Nombre">
+                    </div>
+                    <div class="unacol">
+                        <input required="" type="text" name="Apellidos" id="Apellidos" maxlength="20" minlength="4" placeholder="Apellidos">
+                    </div>
+                    <label for="telefono">Teléfono</label>
+                    <label for="codigoPostal">Código postal</label>
+                    <div class="unacol">
+                        <input required="" type="tel" name="Telefono" pattern="[0-9]{9}" id="telefono" maxlength="9" minlength="9" placeholder="Ejem:922123123">
+                    </div>
+                    <div class="unacol">
+                        <input required="" type="text" name="CodigoPostal" pattern="[38]{2}[0-9]{3}" id="codigoPostal" maxlength="5" minlength="5" placeholder="38XXX">
+                    </div>
                 </div>
-            </div>
-        </fieldset>
-        <fieldset>
-            <legend>Datos Personales</legend>
-            <hr>
-            <div class="dosCol">
-                <label for="Nombre">Nombre</label>
-                <label for="Apellidos">Apellidos</label>
-                <input required="" type="text" name="Nombre" id="Nombre" maxlength="15" minlength="2" placeholder="Nombre">
-                <input required="" type="text" name="Apellidos" id="Apellidos" maxlength="25" minlength="2" placeholder="Apellidos">
-                <label for="telefono">Teléfono</label>
-                <label for="codigoPostal">Código postal</label>
-                <input required="" type="tel" name="Telefono" pattern="[0-9]{9}" id="telefono" maxlength="9" minlength="9" placeholder="Ejem:922123123">
-                <input required="" type="text" name="CodigoPostal" pattern="[38][0-9]{3}" id="codigoPostal" maxlength="5" minlength="5" placeholder="38XXX">
-            </div>
-            <div class="tresCol">
-                <label for="DNI-NIE">DNI/NIE</label>
-                <span>Crear cuenta como:</span>
-                <label for="AnioNacimiento">Año de Nacimiento</label>
-                <div>
-                    <select required="" name="TipoDocumento" id="DNI-NIE_select">
-                        <option value="" disabled selected>---</option>
-                        <option value="DNI">DNI</option>
-                        <option value="NIE">NIE</option>
-                    </select>
-                    <input required type="text" pattern=""  oninput="validacionDNI(this.value)" name="DniNie" disabled id="DNI-NIE" maxlength="9" minlength="9" placeholder="DNI / NIE">
+                <div class="tresCol">
+                    <label for="DNI-NIE">DNI/NIE</label>
+                    <span>Crear cuenta como:</span>
+                    <label for="AnioNacimiento">Año de Nacimiento</label>
+                    <div>
+                        <select required="" name="TipoDocumento" id="DNI-NIE_select" onchange="cambioPatternDniNie(this.value)">
+                            <option value="" disabled selected>---</option>
+                            <option value="DNI">DNI</option>
+                            <option value="NIE">NIE</option>
+                        </select>
+                        <input required type="text" pattern=""  oninput="validacionDNI(this.value)" name="DniNie" disabled id="DNI-NIE" maxlength="9" minlength="9" placeholder="DNI / NIE">
+                    </div>
+                    <div>
+                        <input  type="radio" name="CuentaComo" checked id="Particular">
+                        <label for="Particular">Particular</label>
+                        <input  type="radio" name="CuentaComo" id="Empresa">
+                        <label for="Empresa">Empresa</label>
+                    </div>
+                    <select name="AnioNacimiento" id="AnioNacimiento"></select>
                 </div>
-                <div>
-                    <input  type="radio" name="CuentaComo" checked id="Particular">
-                    <label for="Particular">Particular</label>
-                    <input  type="radio" name="CuentaComo" id="Empresa">
-                    <label for="Empresa">Empresa</label>
+                <span>Elige tus aficiones (al menos 2):</span>
+                <div class="tresCol">
+                    <div>
+                        <input  type="checkbox" class="aficiones" id="Musica" value="MU">
+                        <label for="Musica">Música</label>
+                    </div>
+                    <div>
+                        <input  type="checkbox" class="aficiones" id="Deporte" value="DE">
+                        <label for="Deporte">Deporte</label>
+                    </div>
+                    <div>
+                        <input  type="checkbox" class="aficiones" id="VideoJuegos" value="VI">
+                        <label for="VideoJuegos">Video Juegos</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" class="aficiones" id="Manualidades" value="MA">
+                        <label for="Manualidades">Manualidades</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" class="aficiones" id="Artes" value="AR">
+                        <label for="Artes">Artes</label>
+                    </div>
+                    <div>
+                        <input  type="checkbox" class="aficiones" id="Lectura" value="LE">
+                        <label for="Lectura">Lectura</label>
+                    </div>
                 </div>
-                <select name="AnioNacimiento" id="AnioNacimiento"></select>
-            </div>
-            <span>Elige tus aficiones (al menos 2):</span>
-            <div class="tresCol">
-                <div>
-                    <input  type="checkbox" class="aficiones" id="Musica" value="MU">
-                    <label for="Musica">Música</label>
+                <input type="hidden" name="Aficiones" value="">
+            </fieldset>
+            <fieldset>
+                <legend>Datos de Publicación</legend>
+                <hr>
+                <div class="unacol">
+                    <label for="titulo">Título</label>
+                    <input required="" type="text" id="titulo" name="PublicaciónTitulo" oninput="conteoTitulo()" minlength="4" maxlength="15">
+                    <p class="contador" id="contadorTitulo">0/15</p>
+                    <label for="Descripcion">Descripción</label>
+                    <textarea name="PublicacionDescripcion" id="Descripcion" required minlength="4" maxlength="120" oninput="conteoDescr()"></textarea>
+                    <p class="contador" id="contadorDescrip">0/120</p>
                 </div>
-                <div>
-                    <input  type="checkbox" class="aficiones" id="Deporte" value="DE">
-                    <label for="Deporte">Deporte</label>
-                </div>
-                <div>
-                    <input  type="checkbox" class="aficiones" id="VideoJuegos" value="VI">
-                    <label for="VideoJuegos">Video Juegos</label>
-                </div>
-                <div>
-                    <input type="checkbox" class="aficiones" id="Manualidades" value="MA">
-                    <label for="Manualidades">Manualidades</label>
-                </div>
-                <div>
-                    <input type="checkbox" class="aficiones" id="Artes" value="AR">
-                    <label for="Artes">Artes</label>
-                </div>
-                <div>
-                    <input  type="checkbox" class="aficiones" id="Lectura" value="LE">
-                    <label for="Lectura">Lectura</label>
-                </div>
-            </div>
-            <input type="hidden" name="Aficiones" value="">
-        </fieldset>
-        <fieldset>
-            <legend>Datos de Publicación</legend>
-            <hr>
-            <div class="unacol">
-                <label for="titulo">Título</label>
-                <input required="" type="text" id="titulo" name="PublicaciónTitulo" oninput="conteoTitulo()" maxlength="15">
-                <p class="contador" id="contadorTitulo">0/15</p>
-                <label for="Descripcion">Descripción</label>
-                <textarea name="PublicacionDescripcion" id="Descripcion" required maxlength="120" oninput="conteoDescr()"></textarea>
-                <p class="contador" id="contadorDescrip">0/120</p>
-            </div>
-        </fieldset>
-        <button type="submit">Enviar</button>
-        <input type="reset" name="Resetear" id="Resetear" value="Resetear">
-    </form>
+            </fieldset>
+            <button type="submit">Enviar</button>
+            <input type="reset" name="Resetear" id="Resetear" value="Resetear">
+        </form>
+    </div>
+    <div id="mensajesError">
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
