--- a/DEW/UT04-02/index.html
+++ b/DEW/UT04-02/index.html
@@ -18,14 +18,14 @@
                     <label for="NombreUsuario">Nombre de Usuario</label>
                     <label for="password">Contraseña</label>
                     <div class="unacol">
-                        <input required type="text" name="NombreUsuario" id="userName" placeholder="Nombre de usuario" maxlength="20" minlength="4">
+                        <input required type="text" oninput="editarMensajesError(this.name)" name="NombreUsuario" id="userName" placeholder="Nombre de usuario" maxlength="20" minlength="4">
                     </div>
                     <div>
-                        <input required type="password" name="Contrasena" id="password" pattern="[0-9]{8}" placeholder="Introduce contraseña numérica" minlength="8" maxlength="8" >
+                        <input required type="password" oninput="editarMensajesError(this.name)" name="Contrasena" id="password" pattern="[0-9]{8}" placeholder="Introduce contraseña numérica de 8 caracteres" minlength="8" maxlength="8" >
                     </div>
                     <div></div>
                     <div>
-                        <input  type="checkbox" name="showPassword" id="showPassword">
+                        <input  type="checkbox"  name="showPassword" id="showPassword">
                         <label for="showPassword">Mostrar Contraseña</label>
                     </div>
                 </div>
@@ -37,18 +37,18 @@
                     <label for="Nombre">Nombre</label>
                     <label for="Apellidos">Apellidos</label>
                     <div class="unacol">
-                        <input required="" type="text" name="Nombre" id="Nombre" maxlength="20" minlength="4" placeholder="Nombre">
+                        <input required="" oninput="editarMensajesError(this.name)" type="text" name="Nombre" id="Nombre" maxlength="20" minlength="4" placeholder="Nombre">
                     </div>
                     <div class="unacol">
-                        <input required="" type="text" name="Apellidos" id="Apellidos" maxlength="20" minlength="4" placeholder="Apellidos">
+                        <input required="" oninput="editarMensajesError(this.name)" type="text" name="Apellidos" id="Apellidos" maxlength="20" minlength="4" placeholder="Apellidos">
                     </div>
                     <label for="telefono">Teléfono</label>
                     <label for="codigoPostal">Código postal</label>
                     <div class="unacol">
-                        <input required="" type="tel" name="Telefono" pattern="[0-9]{9}" id="telefono" maxlength="9" minlength="9" placeholder="Ejem:922123123">
+                        <input required="" oninput="editarMensajesError(this.name)" type="tel" name="Telefono" pattern="\(\+34\)\s?[0-9]{9}" id="telefono" maxlength="14" minlength="14" placeholder="Ejem:(+34)123456789">
                     </div>
                     <div class="unacol">
-                        <input required="" type="text" name="CodigoPostal" pattern="[38]{2}[0-9]{3}" id="codigoPostal" maxlength="5" minlength="5" placeholder="38XXX">
+                        <input required="" oninput="editarMensajesError(this.name)" type="text" name="CodigoPostal" pattern="38\s?[0-9]{3}" id="codigoPostal" maxlength="5" minlength="5" placeholder="38XXX">
                     </div>
                 </div>
                 <div class="tresCol">
@@ -105,10 +105,10 @@
                 <hr>
                 <div class="unacol">
                     <label for="titulo">Título</label>
-                    <input required="" type="text" id="titulo" name="PublicaciónTitulo" oninput="conteoTitulo()" minlength="4" maxlength="15">
+                    <input required="" oninput="editarMensajesError(this.name), conteoTitulo()" type="text" id="titulo" name="PublicaciónTitulo" minlength="4" maxlength="15">
                     <p class="contador" id="contadorTitulo">0/15</p>
                     <label for="Descripcion">Descripción</label>
-                    <textarea name="PublicacionDescripcion" id="Descripcion" required minlength="4" maxlength="120" oninput="conteoDescr()"></textarea>
+                    <textarea name="PublicacionDescripcion" id="Descripcion" oninput="editarMensajesError(this.name), conteoDescr()" required minlength="4" maxlength="120" ></textarea>
                     <p class="contador" id="contadorDescrip">0/120</p>
                 </div>
             </fieldset>
